--- a/config.toml
+++ b/config.toml
@@ -83,11 +83,11 @@ hide_page_nextprev_titles = false # hides the next/previous titles for pages tha
 title_size_index = "s85"
 footer_size = "s80" # the size of the copyright and powered by text
 footer_credit = true
-#footer_credit_override = '<p class="s90">Powered by <a href="https://www.getzola.org/" target="_blank">Zola</a> &#38; <a href="https://github.com/Jieiku/abridge/" target="_blank">Abridge</a></p>'
+footer_credit_override = '<p class="s70">Powered by <a href="https://www.getzola.org/" target="_blank">Zola</a></p>'
 #archive_reverse = true # Set to True to sort posts chronologically per year instead of newest first on the archive page: example.com/archive/
 
 ### Uncomment one of the below lines, or neither, depending on which type of logo you want to use:
-logo = { file="bike-hand-drawn.svg", width="64", height="64", alt="romst.com", text=" R O M S T . C O M" }
+logo = { file="bike-hand-drawn.svg", width="84", height="40", alt="romst.com", text=" R O M S T . C O M" }
 #textlogo = '<font color="#f90">A</font>bridge'
 #textlogo = '<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#f90" viewBox="0 0 96 96" width="28" height="28"><path stroke-width="14" d="M14 99 46 7h4l32 92"/><path stroke-width="9" d="M-3 82c43-26 59-26 102 0"/><path stroke-linecap="round" stroke-width="1.5" d="M94 72v7m-5-9.8v7m-5-9.8v7.1M79 64v7M63 57.7v7m-5-8.2v7m-5-7.8v7m-5-7.2v7m-5-6.7v7m-5-6.3v7m-5-5.8v7M17 64v7m-5-4.6v7m-5-4.2v7M2 72v7"/></svg>bridge'
 
@@ -126,7 +126,7 @@ seo = false  # enable or disable seo-related meta tags: opengraph, facebook, twi
 ###   https://github.com/Jieiku/abridge/blob/master/templates/macros/social.html
 ###############################################################################
 
-feed = true # this adds the RSS feed icon in the footer.
+feed = false # this adds the RSS feed icon in the footer.
 #mail = "name@example.com"
 #mastodon = "https://mastodon.example.com/@username"
 #element = "matrix.example.com"
