--- a/config.toml
+++ b/config.toml
@@ -53,10 +53,7 @@ smart_punctuation = false          # `...` to `…`, `"quote"` to `“curly”` 
 ###############################################################################
 
 menu = [
-#    {url = "blog", name = "Blog", slash = true, blank = false, size="s110"},
-#    {url = "about", name = "About", slash = true, blank = false, size="s110"},
-#    {url = "archive", name = "Posts", slash = true, blank = false, size="s110"},
-#    {url = "categories", name = "Categories", slash = true, blank = false, size="s110"},
+    {url = "blog", name = "Blog", slash = true, blank = false, size="s110"},
     {url = "tags", name = "Tags", slash = true, blank = false, size="s110"},
 ]
 menu_footer = [
@@ -67,7 +64,7 @@ menu_footer = [
 ]
 
 toc = true
-recent = true # TOC / index
+recent = false # TOC / index - disabled, using custom Projects sidebar
 recent_items = 15
 series = true
 series_items = 9 # Max number of items to display in series list, use 0 to disable
@@ -179,7 +176,7 @@ js_copycode = true # The copy button on code blocks that allows you to copy them
 js_email_encode = true # obfuscates email address in footer
 js_prestyle = true # used to preload: FontAwesome, Katex, external Google Fonts
 js_switcher = false # The button that allows manually changing between light/dark mode.
-js_switcher_default = "light" # default nojs switcher mode: dark, light (make sure to also set $switcherDefault in abridge.scss)
+js_switcher_default = "dark" # default nojs switcher mode: dark, light (make sure to also set $switcherDefault in abridge.scss)
 
 search_library = "elasticlunr"
 stylesheets = ["abridge.css"]
