--- a/config.toml
+++ b/config.toml
@@ -170,7 +170,7 @@ feed = false # this adds the RSS feed icon in the footer.
 ###############################################################################
 
 uglyurls = false # if set to true then links are generated with the full path. eg https://abridge.netlify.app/index.html
-integrity = false # increases site security, should normally be true. (setting to false is useful during js development)
+integrity = true # increases site security, should normally be true. (setting to false is useful during js development)
 js_bundle = true # multiple javascript files combined into a single file (setting to false is useful during js development)
 
 js_copycode = true # The copy button on code blocks that allows you to copy them to the clipboard.
