--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ base_url = "https://romst.com"
 # If you use the npm/node script then all you have to do is set offline = true, and everything else is automatic.
 
 title = "romst.com"
-description = "Posts about random things that interest me."#for SEO aim for 140-180 Characters
+description = "Personal blog and projects by SRV covering programming, electronics, robotics, synthesizers, and interactive web experiments. Tutorials, code examples, and creative tech projects."
 theme = "abridge"
 
 default_language = "en"
@@ -106,14 +106,14 @@ foothr = false # show or hide horizontal rule above footer
 ###############################################################################
 
 title_separator = "|"  # Separator between title and title_addition, set as |, -, _, etc
-title_addition = "A blog about random things" # a default value for title addition (for SEO aim for 50-70 characters including the title and separator 'Abridge | title_addition')
+title_addition = "Programming, Electronics & Creative Tech" # a default value for title addition (for SEO aim for 50-70 characters including the title and separator 'Abridge | title_addition')
 author = "SRV" # Put Your Name here
-keywords = "programming engineering robotics" # used for the primary site index
-banner = "bike-hand-drawn.svg" # Used as default image for OpenGraph/Twitter if page specific image is undefined.
-twitter_meta = "your-user-name" # for SEO: twitter:site and twitter:creator
-google = "Your Google Site verification code."
-bing = "Your Bing Site verification code."
-seo = false  # enable or disable seo-related meta tags: opengraph, facebook, twitter
+keywords = "programming, javascript, electronics, robotics, synthesizer, web audio, canvas games, tutorials, creative coding" # used for the primary site index
+banner = "banner.png" # Used as default image for OpenGraph/Twitter if page specific image is undefined.
+#twitter_meta = "your-user-name" # for SEO: twitter:site and twitter:creator - uncomment and set if you have Twitter
+google = "73KlcDLFO7gifGWdAibziZinr7WFg9uL6I5DUeHG0n8" # Get from Google Search Console
+#bing = "Your Bing Site verification code." # Get from Bing Webmaster Tools
+seo = true  # enable or disable seo-related meta tags: opengraph, facebook, twitter
 #dev = false # development mode, if true then robots.txt should prevent search indexing.
 
 #head_extra = '<meta name="analytics" content="my-analytics-id" /><meta name="advertising" content="my-advertising-id" />'
