--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ base_url = "https://romst.com"
 # If you use the npm/node script then all you have to do is set offline = true, and everything else is automatic.
 
 title = "romst.com"
-description = "Personal blog and projects by SRV covering programming, electronics, robotics, synthesizers, and interactive web experiments. Tutorials, code examples, and creative tech projects."
+description = "Personal technical blog and projects by SRV"
 theme = "abridge"
 
 default_language = "en"
@@ -108,7 +108,7 @@ foothr = false # show or hide horizontal rule above footer
 title_separator = "|"  # Separator between title and title_addition, set as |, -, _, etc
 title_addition = "Programming, Electronics & Creative Tech" # a default value for title addition (for SEO aim for 50-70 characters including the title and separator 'Abridge | title_addition')
 author = "SRV" # Put Your Name here
-keywords = "programming, javascript, electronics, robotics, synthesizer, web audio, canvas games, tutorials, creative coding" # used for the primary site index
+keywords = "programming, javascript, electronics, robotics, synthesizer, web audio, canvas games, tutorials, creative coding, embedded" # used for the primary site index
 banner = "banner.png" # Used as default image for OpenGraph/Twitter if page specific image is undefined.
 #twitter_meta = "your-user-name" # for SEO: twitter:site and twitter:creator - uncomment and set if you have Twitter
 google = "73KlcDLFO7gifGWdAibziZinr7WFg9uL6I5DUeHG0n8" # Get from Google Search Console
